--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "hedbladucf",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.14.0",
     "loadash": "0.0.1",
     "lodash": "^4.16.4",
+    "morgan": "^1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
