--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ReactToDoList",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,10 +10,8 @@
   "author": "hedbladucf",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0",
     "loadash": "0.0.1",
     "lodash": "^4.16.4",
-    "morgan": "^1.7.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
   },
