--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "hedbladucf",
   "license": "ISC",
   "dependencies": {
-    "loadash": "0.0.1",
+    "express": "^4.13.4",
     "lodash": "^4.16.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2"
@@ -23,5 +23,8 @@
     "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.16.2"
+  },
+  "engines": {
+    "node": "5.5.0"
   }
 }
